--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,36 @@
-<nav>
-  <% if user_signed_in? %>
-    <span class='nav-greeting'>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container">
+  <%= link_to "Dark Net", root_path, class:"navbar-brand" %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ">
+      <li class="nav-item">
+        <%= link_to "Sell", new_product_path, class:"nav-link" %>
+      </li>
+      
+     <li class="nav-item"><%= link_to material_icon.favorite, root_path, class:"nav-link" %>
+     </li>
+
+     <li class="nav-item"><%= link_to material_icon.shopping_cart, root_path, class:"nav-link" %>
+     </li>      
+      
+        <% if user_signed_in? %>
+        <li class="nav-item">
+    <span class="nav-link">
       <%= "Welcome back, #{current_user.first_name}"%>
     </span>
-    <%= link_to "Sign Out", destroy_user_session_path, method: "delete" %>
+    </li>
+    <li class="nav-item">
+    <%= link_to "Logout", destroy_user_session_path, method: "delete",class:"nav-link" %>
   <% else %>
-   <%= link_to "Sign In", new_user_session_path %>
-   <%= link_to "Sign Up", new_user_registration_path%>
+   <%= link_to "Login", new_user_session_path, class:"nav-link" %>
   <% end %>
+      </li>
+      
+    </ul>
+  </div>
+  </div>
 </nav>
