--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Add New Product</h1>
+<div class="jumbotron">
+  <h1 class="display-4">Add New Product!</h1>
+  <p class="lead"></p>
+  <hr class="my-4">
+</div>
 
 <%= render 'form', product: @product %>
-<%= link_to 'Back', products_path, class:"btn btn-warning mt-3 mb-5 " %>
+<%= link_to 'Back', products_path, class:"btn btn-secondary mt-3 mb-5 " %>
 
