--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -13,6 +13,6 @@
     <p class="mt-3"><%= f.input :quantity_available %></p>
     <p class="mt-3"><%= f.association :category %></p>
     <p class="mt-3"><%= f.file_field :picture, accept: 'image/png, image/jpg, image/jpeg' %></p>  
-    <%= f.button :submit, class:"btn btn-primary btn-lg btn-block mt-3 mb-3 " %> 
+    <%= f.button :submit, class:"btn btn-info btn-lg btn-block mt-3 mb-3 " %> 
   </div> 
 <% end %>
