--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+
+<div class="jumbotron">
+  <h1 class="display-4">Product Details!</h1>
+  <p class="lead"></p>
+  <hr class="my-4">
 <p>
   <strong>Condition:</strong>
   <%= @product.condition.name %>
@@ -55,5 +60,7 @@
   <%= image_tag @product.picture %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+</div>
+   
+  <%= link_to 'Edit', edit_product_path(@product), class:"btn btn-warning mb-5 "%> 
+  <%= link_to 'Back', products_path, class:"btn btn-secondary mx-3 mb-5" %>
