--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ">
       <li class="nav-item">
-        <%= link_to "Sell", new_product_path, class:"nav-link" %>
+        <%= link_to "Sell", products_path, class:"nav-link" %>
       </li>
       
      <li class="nav-item"><%= link_to material_icon.favorite, root_path, class:"nav-link" %>
