--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -42,4 +42,4 @@
 </div>
 <br>
 
-<%= link_to 'New Product', new_product_path, class:"btn btn-info" %>
+<%= link_to 'New Product', new_product_path, class:"btn btn-info mb-3" %>
