--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,15 @@
  *= require_tree .
  *= require_self
  *= require material_icons
+ 
+ 
+
  */
- @import "bootstrap";
+@import "bootstrap";
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;}
+.blue{background-color: blue;}
+.red{background-color: red;}
+.greem{background-color: green;}
