--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,13 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light">
 <div class="container">
-  <%= link_to "Dark Net", root_path, class:"navbar-brand" %>
+  <div class="row mx-auto col-12">
+  <%= link_to "Dark Net", root_path, class:"navbar-brand  col-6 justify-content-start p-0 m-0 my-auto" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ">
+  <div class="collapse navbar-collapse col-6 justify-content-end p-0 m-0" id="navbarNav">
+    <ul class="navbar-nav  ">
       <li class="nav-item">
         <%= link_to "Sell", products_path, class:"nav-link" %>
       </li>
@@ -33,4 +34,7 @@
     </ul>
   </div>
   </div>
+  </div>
 </nav>
+
+
