buyer page see item implemented

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,4 +24,7 @@ body{
   box-sizing: border-box;}
 .blue{background-color: blue;}
 .red{background-color: red;}
-.greem{background-color: green;}
+.greem{color: green;}
+.t-blue{color: blue;}
+.t-red{color: red;}
+.t-greem{color: green;}
