some small home page  styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,8 @@
 <div class="container">
   <form action="<%= home_path%>" method="POST" class="form-inline row">
     <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
-    <div class="col-5 col-sm-6 p-0">
-      <input name="search" class="form-control" type="search" placeholder="Search" aria-label="Search">
+    <div class="col p-0">
+      <input name="search" class="form-control w-100" type="search" placeholder="Search" aria-label="Search">
     </div>
     <select name="category" class="custom-select col-4 col-sm-3 mx-sm-1 " id="Select">    
       <option value="">Choose...</option>
@@ -22,18 +22,19 @@
       Search
     </button >
   </form>
-  <div class="d-flex row justify-content-around mb-3">
+  <div class="d-flex bg-dark b-radius row justify-content-around my-3">
   <% if @products %>
     <% @products.each do |product|%>
     
-      <div class="card mt-3 mt-sm-3 p-0" style="width: 10rem;">
+      <div class="card my-3 mt-sm-3 p-0" style="width: 10rem;">
         <%= image_tag product.picture, class:"card-img-top " %>
         <div class="card-body">
           <h5 class="card-title"><%= product.title.capitalize %></h5>
-          <p class="card-text">Available: <%= product.quantity_available %></p>      
-          <p class="card-text">Price: <%= product.price %></p>
-          <p class="card-text">Sold: <%= product.sold %></p>         
-          <%= link_to "See more", see_product_path(product.id)%>
+               
+          <p class="card-text my-0"><small>Price: $ <%= product.price %></small></p>
+          <p class="card-text my-0 t-greem"><small>Available: <%= product.quantity_available %></small></p> 
+          <p class="card-text t-red"><small>Sold: <%= product.sold %></small></p><small>         
+          <%= link_to "See more", see_product_path(product.id)%></small>
         </div>
       </div>    
     <%end%>
