added cart pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,11 @@ body{
 .t-red{color: red;}
 .t-greem{color: green;}
 .b-radius{border-radius: 5px;}
+.notice{
+  background-color: rgb(204, 252, 133);
+  width: 100%;
+  text-align: center;
+  color: green;
+  border-radius: 5px;
+  border-color: green;  
+}
