--- a/app/views/cart_item/update.html.erb
+++ b/app/views/cart_item/update.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="max-width: 36rem;">
 <form action="/carts" method="POST">
-  <h3>Hot Deal!</h3>
+  <h3>Edit item!</h3>
   <hr class="my-4">
   <div class="card m-auto">
     <%= image_tag @product.picture, class:"card-img-top"%>
