--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
          
     <%= render "shared/navbar" %>
     <div class="container"> 
-      <p class="notice"><%= notice %></p>
+      <p class="notice my-2"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>    
