--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
      <li class="nav-item"><%= link_to material_icon.favorite, root_path, class:"nav-link" %>
      </li>
 
-     <li class="nav-item"><%= link_to material_icon.shopping_cart, root_path, class:"nav-link" %>
+     <li class="nav-item"><%= link_to material_icon.shopping_cart, carts_path, class:"nav-link" %>
      </li>      
       
         <% if user_signed_in? %>
