--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -29,9 +29,9 @@
         <p class="row mx-auto"><%= number_with_precision(item.price, precision: 2) %></p>
       </div>
       <div class="row col-12 mx-auto mt-1 mb-3">      
-        <%= link_to 'See', @cart, class:"btn btn-primary btn-sm mr-1" %>
-        <%= link_to 'Edit', edit_cart_path(@cart), class:"btn btn-warning btn-sm mr-1" %>
-        <%= link_to 'Del', @cart, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger btn-sm" %>        
+        <%= link_to 'See', cart_item_show_path(item.id), class:"btn btn-primary btn-sm mr-1" %>
+        <%= link_to 'Edit', cart_item_edit_path(item.id), class:"btn btn-warning btn-sm mr-1" %>
+        <%= link_to 'Del', cart_item_destroy_path(item.id), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger btn-sm" %>        
       </div>  
     </div>    
   <% end %>
