--- a/app/views/user_contact_info/new.html.erb
+++ b/app/views/user_contact_info/new.html.erb
@@ -7,15 +7,14 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">      
+  <div class="form-inputs">    
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>  
     <p class="mt-3"><%= f.input :unit %></p>
     <p class="mt-3"><%= f.input :street_number %></p>
     <p class="mt-3"><%= f.input :street_name %></p>    
     <p class="mt-3"><%= f.input :suburb %></p>
-    <p class="mt-3"><%= f.input :postcode, label: '' %></p>
+    <p class="mt-3"><%= f.input :postcode %></p>
     <p class="mt-3"><%= f.input :phone %></p>
-    
-    
-    <%= f.button :submit, 'Save', class:"btn btn-info btn-lg btn-block mt-3 mb-3 " %> 
+  <%= f.button :submit, 'Save', class:"btn btn-info btn-lg btn-block mt-3 mb-3 " %> 
   </div> 
 <% end %>
