--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -6,20 +6,26 @@
 <div class="col-12">
   <div class="row">    
       <strong class="col-4">Date</strong>
-      <strong class="col-4">Receipt</strong>
+      <strong class="col-4">Status</strong>
       <strong class="col-4">Total $</strong>      
   </div>  
     <% @carts.each do |cart| %>
       <div class="row">
         <span class="col-4"><%= cart.created_at.strftime('%d/%m/%Y')%></span>
-        <span class="col-4"><%= cart.id %><%= cart.receipt_url %></span>
+        <span class="col-4"><%= cart.status.name %></span>
         
         <span class="col-4"><%= number_with_precision(cart.total_amount, precision: 2) %></span>
         </div>
         <div class="row mx-auto mt-2 mb-4">
         <%= link_to 'See', cart, class:"btn btn-primary btn-sm mr-2" %>
+        <% if !cart.receipt_url%>
         <%= link_to 'Edit', cart,class:"btn btn-warning btn-sm mr-2" %>
         <%= link_to 'Del', cart, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger btn-sm" %>
+        <%end%>
+        <% if cart.receipt_url%>
+        <%= link_to 'View Receipt', cart.receipt_url, target: :_blank, class:" mx-3" %> 
+        <%end%>
+        
         </div>
       
     <% end %>
