--- a/app/views/payment/success.html.erb
+++ b/app/views/payment/success.html.erb
@@ -1,4 +1,4 @@
 <h1>Payment Success</h1>
-<p>Payment Successfuly processed, <strong></strong><%= link_to "Click here to see your receipt", @cart.payment.receipt_url%> !</strong></p>
+<p>Payment Successfuly processed, <strong></strong><%= link_to "Click here to see your receipt", @cart.payment.receipt_url, target: :_blank %> !</strong></p>
 
 <%= link_to 'Go back homepage', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
