--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -30,7 +30,7 @@
       </div>
       <div class="row col-12 mx-auto mt-1 mb-3">      
         <%= link_to 'See', cart_item_show_path(item.id), class:"btn btn-primary btn-sm mr-1" %>
-        <% if @cart.receipt_url%>
+        <% if @cart.payment.receipt_url%>
         <%= link_to 'Edit', cart_item_edit_path(item.id), class:"btn btn-warning btn-sm mr-1" %>
         <%= link_to 'Del', cart_item_destroy_path(item.id), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger btn-sm" %>  
         <%end%>      
@@ -48,6 +48,7 @@
   <p class="lead"></p>
   
 </div>
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 <a href="<%= has_info? ? user_contact_info_path : new_user_contact_info_path %>"><button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>">Checkout!</button></a>
 
 <%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
