--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -56,8 +56,20 @@
     </button>
     <button type="submit" name="path_home" value="true" class="btn btn-info btn-lg btn-block my-3">Add To Cart!
     </button>
+
+
+  <%= form_with url: add_favorite_path(@product.id), local: true, method: :post do %> 
+
+
   
-  <%= link_to material_icon.favorite, new_product_path, class:"btn btn-danger btn-lg btn-block my-3" %>
+
+  
+ <button onclick='myFunction("<%= @product.id%>")' class="btn btn-danger btn-lg btn-block my-3 ">
+                <i class="material-icons pr-4 align-middle">favorite</i>
+                Save              
+              </button>       
+
+<%end%> 
 
   <%= link_to "Back" , root_path, class:"btn btn-light btn-lg btn-block my-3" %>
   </form>
