--- a/app/views/user_contact_info/edit.html.erb
+++ b/app/views/user_contact_info/edit.html.erb
@@ -1,16 +1,22 @@
+<div class="jumbotron">
+  <h3 class="display-6">Edit Shipping Details!</h3>  
+  <hr class="my-4">
+</div>
+
 <%= simple_form_for(@user_contact_info, :url => user_contact_info_path(current_user.id), method: "PUT") do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">        
+  <div class="form-inputs">   
+  <%= f.hidden_field_tag :authenticity_token, form_authenticity_token %>     
     <p class="mt-3"><%= f.input :unit %></p>
     <p class="mt-3"><%= f.input :street_number %></p>
     <p class="mt-3"><%= f.input :street_name %></p>
     <p class="mt-3"><%= f.input :suburb %></p>
     <p class="mt-3"><%= f.input :postcode %></p>
     <p class="mt-3"><%= f.input :phone %></p>
-    <%= f.button :submit,"Update Shipping Details!", class:"btn btn-primary btn-lg btn-block mt-3 mb-3 " %> 
+    <%= f.button :submit,"Save!", class:"btn btn-primary btn-lg btn-block mt-3 mb-3 " %> 
   </div> 
 <% end %>
 
-<%= link_to 'Back!', user_contact_info_path(1), class:"btn btn-info btn-lg btn-block my-4" %>
+<%= link_to 'Back!', user_contact_info_path(1), class:"btn btn-secondary btn-lg btn-block my-4" %>
