--- a/app/views/user_contact_info/show.html.erb
+++ b/app/views/user_contact_info/show.html.erb
@@ -3,7 +3,8 @@
   <hr class="my-4">
 </div>
 <%= simple_form_for(@user_contact_info) do |f| %>
-  <div class="form-inputs">      
+  <div class="form-inputs"> 
+   <%= f.hidden_field_tag :authenticity_token, form_authenticity_token %>     
     <p class="mt-3"><%= f.input :unit, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_number, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_name, disabled: true %></p>
@@ -12,9 +13,9 @@
     <p class="mt-3"><%= f.input :phone, disabled: true %></p>
   </div>   
 
-  <button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>" data-stripe="payment">Continue Checkout!</button>
+  <button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>" data-stripe="payment">Confirm Shipping Details!</button>
   
-  <%= link_to 'Update shipping Details!', edit_user_contact_info_path, class:"btn btn-info btn-lg btn-block mt-3 mb-5" %>
+  <%= link_to 'Edit shipping Details!', edit_user_contact_info_path, class:"btn btn-warning btn-lg btn-block mt-3 mb-5" %>
 <% end %>
 <script src="https://js.stripe.com/v3/"></script>
 <script>
