--- a/app/views/user_contact_info/edit.html.erb
+++ b/app/views/user_contact_info/edit.html.erb
@@ -8,7 +8,7 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">   
-  <%= f.hidden_field_tag :authenticity_token, form_authenticity_token %>     
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>     
     <p class="mt-3"><%= f.input :unit %></p>
     <p class="mt-3"><%= f.input :street_number %></p>
     <p class="mt-3"><%= f.input :street_name %></p>
