--- a/app/views/user_contact_info/show.html.erb
+++ b/app/views/user_contact_info/show.html.erb
@@ -4,7 +4,7 @@
 </div>
 <%= simple_form_for(@user_contact_info) do |f| %>
   <div class="form-inputs"> 
-   <%= f.hidden_field_tag :authenticity_token, form_authenticity_token %>     
+   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>     
     <p class="mt-3"><%= f.input :unit, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_number, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_name, disabled: true %></p>
