--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,37 +1,31 @@
 <div class="jumbotron">
-  <h1 class="display-4">All Carts!</h1>
+  <h3 class="display-5">All Carts!</h3>
   <p class="lead"></p>
   <hr class="my-4">
 </div>
-<div class="col-12">
+<div class="col-12 bg-light p-3">
   <div class="row">    
       <strong class="col-4">Date</strong>
       <strong class="col-4">Status</strong>
       <strong class="col-4">Total $</strong>      
   </div>  
-    <% @carts.each do |cart| %>
-      <div class="row">
-        <span class="col-4"><%= cart.created_at.strftime('%d/%m/%Y')%></span>
-        <span class="col-4"><%= cart.status.name %></span>
-        
-        <span class="col-4"><%= number_with_precision(cart.total_amount, precision: 2) %></span>
-        </div>
-        <div class="row mx-auto mt-2 mb-4">
-        <%= link_to 'See', cart, class:"btn btn-primary btn-sm mr-2" %>
-        <% if !cart.payment.receipt_url%>
+  <% @carts.each do |cart| %>
+    <div class="row">
+      <span class="col-4"><%= cart.created_at.strftime('%d/%m/%Y')%></span>
+      <span class="col-4"><%= cart.status.name %></span>        
+      <span class="col-4"><%= number_with_precision(cart.total_amount, precision: 2) %></span>
+    </div>
+    <div class="row mx-auto mt-2 mb-4">
+      <%= link_to 'See', cart, class:"btn btn-primary btn-sm mr-2" %>
+      <% if !cart.payment.receipt_url%>
         <%= link_to 'Edit', cart,class:"btn btn-warning btn-sm mr-2" %>
         <%= link_to 'Del', cart, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger btn-sm" %>
-        <%end%>
-        <% if cart.payment.receipt_url%>
+      <%end%>
+      <% if cart.payment.receipt_url%>
         <%= link_to 'View Receipt', cart.payment.receipt_url, target: :_blank, class:" mx-3" %> 
-        <%end%>
-        
-        </div>
-      
-    <% end %>
-  
+      <%end%>        
+    </div>      
+  <% end %>  
 </div>
-
 <br>
-
 <%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
