--- a/app/views/payment/success.html.erb
+++ b/app/views/payment/success.html.erb
@@ -1,4 +1,8 @@
-<h1>Payment Success</h1>
+<div class="jumbotron">
+  <h3 class="display-5">Payment Success!</h3>
+  <p class="lead"></p>
+  <hr class="my-4">
+</div>
 <p>Payment Successfuly processed, <strong></strong><%= link_to "Click here to see your receipt", @cart.payment.receipt_url, target: :_blank %> !</strong></p>
 
 <%= link_to 'Go back homepage', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
