--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">      
+  <div class="form-inputs bg-light p-3">      
     <p class="mt-3"><%= f.input :title %></p>
     <p class="mt-3"><%= f.input :description %></p>
     <p class="mt-3"><%= f.input :price %></p>
@@ -12,7 +12,7 @@
     <p class="mt-3"><%= f.input :delivery_estimated, label: 'Delivery estimated (Days)' %></p>
     <p class="mt-3"><%= f.input :quantity_available %></p>
     <p class="mt-3"><%= f.association :category %></p>
-    <p class="mt-3"><%= f.file_field :picture, accept: 'image/png, image/jpg, image/jpeg' %></p>  
-    <%= f.button :submit, class:"btn btn-info btn-lg btn-block mt-3 mb-3 " %> 
+    <p class="mt-4"><%= f.file_field :picture, accept: 'image/png, image/jpg, image/jpeg' %></p>  
+    <%= f.button :submit, class:"btn btn-info btn-lg btn-block mt-5 " %> 
   </div> 
 <% end %>
