--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,10 +1,11 @@
 <div class="jumbotron">
-  <h1 class="display-4">Edit Product!</h1>
+  <h3 class="display-5">Edit Product!</h3>
   <p class="lead"></p>
   <hr class="my-4">
-
-<%= render 'form', product: @product %>
 </div>
-  <%= link_to 'Show', @product, class:"btn btn-primary mb-5" %> 
-  <%= link_to 'Back', products_path, class:"btn btn-secondary mx-3 mb-5" %>
+<%= render 'form', product: @product %>
+
+  <div class="bg-light p-3"> 
+  <%= link_to 'Back', products_path, class:"btn btn-secondary btn-lg btn-block mb-5" %>
+  </div>
 
