--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,10 +2,11 @@
 
 
 <div class="jumbotron">
-  <h1 class="display-4">Product Details!</h1>
+  <h3 class="display-5">Product Details!</h3>
   <p class="lead"></p>
   <hr class="my-4">
-
+</div>
+<div class="bg-light p-3 mb-4">
 <p>
   <strong>Title:</strong>
   <%= @product.title %>
@@ -55,8 +56,8 @@
  
   <%= image_tag @product.picture, class:"b-radius w-100" %>
 </p>
-
 </div>
+
    
   <%= link_to 'Edit', edit_product_path(@product), class:"btn btn-warning mb-5 "%> 
   <%= link_to 'Back', products_path, class:"btn btn-secondary mx-3 mb-5" %>
