--- a/app/views/user_contact_info/edit.html.erb
+++ b/app/views/user_contact_info/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="jumbotron">
-  <h3 class="display-6">Edit Shipping Details!</h3>  
+  <h3 class="display-5">Edit Shipping Details!</h3>  
   <hr class="my-4">
 </div>
 
-<%= simple_form_for(@user_contact_info, :url => user_contact_info_path(current_user.id), method: "PUT") do |f| %>
+<%= simple_form_for(@user_contact_info, :url => update_info_path(current_user.id), method: "PUT") do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">   
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>     
+  <div class="form-inputs bg-light p-3">   
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>     
     <p class="mt-3"><%= f.input :unit %></p>
     <p class="mt-3"><%= f.input :street_number %></p>
     <p class="mt-3"><%= f.input :street_name %></p>
