--- a/app/views/user_contact_info/show.html.erb
+++ b/app/views/user_contact_info/show.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron">
-  <h3 class="display-6">My Shipping Details!</h3>  
+  <h3 class="display-5">My Shipping Details!</h3>  
   <hr class="my-4">
 </div>
 <%= simple_form_for(@user_contact_info) do |f| %>
-  <div class="form-inputs"> 
-   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>     
+  <div class="form-inputs bg-light p-3"> 
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>     
     <p class="mt-3"><%= f.input :unit, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_number, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_name, disabled: true %></p>
