--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.landing-page{
+  padding: 0;
+  margin:0;
+  top:0;
+  left:0;
+  display:block;
+  width:100vw; height:1000px;
+  object-fit: cover;
+  position: absolute;
+  opacity: 0.8;
+  z-index: -1;
+}
