--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,9 @@
   <div class="collapse navbar-collapse col-6 justify-content-end p-0 m-0" id="navbarNav">
     <ul class="navbar-nav  ">
       <li class="nav-item">
+        <%= link_to "Buy", home_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item">
         <%= link_to "Sell", products_path, class:"nav-link" %>
       </li>
       
