--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,30 +1,7 @@
 
 <%= image_tag "landing_image", class:" landing-page"%>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<h1 class="t-white my-5 my-sm-3">Darknet, The Best Experience Ever!</h1>
+<h1 class="t-white my-5">Darknet, The Best Experience Ever!</h1>
 <div class="card">
   <div class="card-header">
     Amazing Products on Offer!
@@ -32,7 +9,7 @@
   <div class="card-body grey t-white">
     <h5 class="card-title">Are you looking for something?!</h5>
     <p class="card-text">There's no other marketplace in the world that has the breadth of products and passionate sellers as Darknet. We can offer a full spectrum of value because of this diverse community of sellers.</p>    
-    <%= link_to "Go shop now!", home_path, class:"btn btn-light" %>
+    <%= link_to "Go shop now!", listing_path, class:"btn btn-light" %>
   </div>
 </div>
 
