--- a/app/views/pages/listing.html.erb
+++ b/app/views/pages/listing.html.erb
@@ -3,50 +3,48 @@
   <p class="lead"></p>
   <hr class="my-4">
 </div>
-
 <div class="container">
-  <form action="<%= home_path%>" method="POST" class="form-inline row">
-    <a class="nav-link dropdown-toggle col-12" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Filter
-    </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-      <div class="col my-2 d-flex dropdown-item">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="filter" id="radios1" value="asc" checked>
-          <label class="form-check-label" for="radios1">
-            <i class="material-icons pr-2">arrow_downward</i>
-            By "Name"
+  <form action="<%= listing_path%>" method="get" class="form-inline row">
+    
+    <div onclick='toggle("filter","eye")' class="d-flex drop-down mb-2"><span >Filter</span><i class="material-icons pl-3" id="eye">visibility</i></div>      
+    
+    <div style="display: block" class="bg-light my-3 p-3" id="filter">
+      <div class="d-flex mb-3">
+        <div class="form-check col">
+          <input class="form-check-input" type="radio" name="filter" id="filter1" value="title-asc" checked>
+          <label class="form-check-label d-flex" for="radios1">
+            <i class="material-icons pr-2">arrow_upward</i>
+            <span>By "Name"</span>
           </label>
         </div>    
-        <div class="form-check ml-sm-4">
-          <input class="form-check-input" type="radio" name="filter" id="radios2" value="desc">
-          <label class="form-check-label" for="radios2">
-            <i class="material-icons pr-2">arrow_upward</i>By "Name"
+        <div class="form-check col">
+          <input class="form-check-input" type="radio" name="filter" id="filter2" value="price-asc">
+          <label class="form-check-label d-flex" for="radios2">
+            <i class="material-icons pr-2">arrow_upward</i><span>By "Price"</span>
           </label>
         </div>
       </div>
-        <div class="col my-2 d-flex ">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="filter" id="radios1" value="asc" checked>
-          <label class="form-check-label" for="radios1">
-            <i class="material-icons pr-2">arrow_downward</i>
-            By "Name"
+      <div class="d-flex mt-2">
+        <div class="form-check col">
+          <input class="form-check-input" type="radio" name="filter" id="filter3" value="title-desc">
+          <label class="form-check-label d-flex" for="radios1">
+            <i class="material-icons pr-2">arrow_downward</i><span>
+            By "Name"</span>
           </label>
         </div>    
-        <div class="form-check ml-sm-4">
-          <input class="form-check-input" type="radio" name="filter" id="radios2" value="desc">
-          <label class="form-check-label" for="radios2">
-            <i class="material-icons pr-2">arrow_upward</i>By "Name"
+        <div class="form-check col">
+          <input class="form-check-input" type="radio" name="filter" id="filter4" value="price-desc">
+          <label class="form-check-label d-flex" for="radios2">
+            <i class="material-icons pr-2">arrow_downward</i><span>By "Price"</span>
           </label>
         </div>
       </div>
-    </div>
-    <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
+    </div>    
     <div class="col-12 p-0 d-flex justify-content-between">
-    
-      <input name="search" class="form-control col-5 col-sm-6" type="search" placeholder="Search" aria-label="Search">
-    
-    <select name="category" class="custom-select col-4 col-sm-3" id="Select">    
+    <div class="col-5 col-sm-6 p-0">
+      <input name="search" class="form-control red w-100" type="search" placeholder="Search" aria-label="Search">
+    </div>
+    <select name="category" class="custom-select col-4 w-100 col-sm-3" id="Select">    
       <option value="">Category...</option>
       <% @categories.each do |category| %>
         <option type="text" value=<%= category.id %> >
@@ -55,7 +53,7 @@
       <%end%>
     </select> 
  
-    <button class="btn btn-outline-success col-3 " type="submit">
+    <button class="btn btn-outline-success col-3 w-100 " type="submit">
       Search
     </button >
     </div>
@@ -104,4 +102,18 @@
   function myFunction(id) {
     document.getElementById(id).style.display = 'block';  
  }
+ function toggle(id,id2) {
+  var x = document.getElementById(id);
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+  var y = document.getElementById(id2);
+  if (y.innerHTML === "visibility") {
+    y.innerHTML = "visibility_off";
+  } else {
+    y.innerHTML = "visibility";
+  }
+}
 </script>
