--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,26 +1,23 @@
 
 <nav class="navbar navbar-expand navbar-dark bg-dark">
-<div class="container">
-  <div class="row mx-auto col-12">
-  <%= link_to "Dark Net", root_path, class:"navbar-brand  col-6 justify-content-start p-0 m-0 my-auto" %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse col-6 justify-content-end p-0 m-0" id="navbarNav">
-    <ul class="navbar-nav  ">
-      <li class="nav-item">
-        <%= link_to "Buy", home_path, class:"nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sell", products_path, class:"nav-link" %>
-      </li>
-      
-     <li class="nav-item"><%= link_to material_icon.favorite, favorite_index_path, class:"nav-link" %>
-     </li>
+  <div class="container">
+    <div class=" d-flex col-12 p-0">
+    <%= link_to "Dark Net", root_path, class:"navbar-brand  col-3 col-sm-6 justify-content-start my-auto mx-0 p-0 " %>   
+    <div class="collapse justify-content-end navbar-collapse mx-0 p-0 col-9 col-sm-6" id="navbarNav">
+        <ul class="navbar-nav  ">
+          <li class="nav-item">
+            <%= link_to "Buy", listing_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sell", products_path, class:"nav-link" %>
+          </li>
+          
+        <li class="nav-item"><%= link_to material_icon.favorite, favorite_index_path, class:"nav-link" %>
+        </li>
 
-     <li class="nav-item"><%= link_to material_icon.shopping_cart, carts_path, class:"nav-link" %>
-     </li>      
-      
+        <li class="nav-item"><%= link_to material_icon.shopping_cart, carts_path, class:"nav-link" %>
+        </li>      
+          
         <% if user_signed_in? %>
         <li class="nav-item">
     <span class="nav-link">
