small fixing listing responsive layout

--- a/app/views/pages/listing.html.erb
+++ b/app/views/pages/listing.html.erb
@@ -8,7 +8,7 @@
     
     <div onclick='toggle("filter","eye")' class="d-flex drop-down mb-2"><span >Filter</span><i class="material-icons pl-3" id="eye">visibility</i></div>      
     
-    <div style="display: block" class="bg-light my-3 p-3" id="filter">
+    <div style="display: block " class="bg-light my-3 p-3 col-12" id="filter">
       <div class="d-flex mb-3">
         <div class="form-check col">
           <input class="form-check-input" type="radio" name="filter" id="filter1" value="title-asc" checked>
@@ -42,7 +42,7 @@
     </div>    
     <div class="col-12 p-0 d-flex justify-content-between">
     <div class="col-5 col-sm-6 p-0">
-      <input name="search" class="form-control red w-100" type="search" placeholder="Search" aria-label="Search">
+      <input name="search" class="form-control w-100" type="search" placeholder="Search" aria-label="Search">
     </div>
     <select name="category" class="custom-select col-4 w-100 col-sm-3" id="Select">    
       <option value="">Category...</option>
