--- a/app/views/user_mailer/receipt_email.html.erb
+++ b/app/views/user_mailer/receipt_email.html.erb
@@ -13,7 +13,7 @@
 <br>
    <br> 
     <p>
-      You have successfully signed up to example.com,
+      You have successfully signed up to darknet2.herokuapp.com,
       your username is: .<br>
     </p>
     <a href="<%= @receipt%>">Click here to see your receipt!</a>
