--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -15,7 +15,7 @@
       <span class="col-4"><%= cart.status.name %></span>        
       <span class="col-4"><%= number_with_precision(cart.total_amount, precision: 2) %></span>
     </div>
-    <div class="row mx-auto mt-2 mb-4">
+    <div class=" d-flex mx-auto mt-2 mb-4">
       <%= link_to 'See', cart, class:"btn btn-primary btn-sm mr-2" %>
       <% if !cart.payment.receipt_url%>
         <%= link_to 'Edit', cart,class:"btn btn-warning btn-sm mr-2" %>
