--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -49,7 +49,7 @@
 </div>
 <% if !@cart.payment.receipt_url%>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <a href="<%= has_info? ? user_contact_info_path : new_user_contact_info_path %>"><button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>">Checkout!</button></a>
+  <a href="<%= has_info? ? shipping_info_path : new_shipping_info_path %>"><button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>">Checkout!</button></a>
 <% end %>
 <%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
 
