--- a/app/views/pages/listing.html.erb
+++ b/app/views/pages/listing.html.erb
@@ -59,7 +59,7 @@
     </div>
     
   </form>
-  <div class="d-flex bg-light h-100 b-radius row justify-content-around my-4 py-4" >
+  <div class="d-flex bg-light overflow-hidden h-100 b-radius row justify-content-around my-4 py-4" >
     <% if @products %>
       <% @products.each do |product|%>      
         <div class="card my-3 mt-3 p-0 " style="width: 10rem;height: 26rem;">
@@ -85,12 +85,21 @@
                 <button type="button" class="close h-50" data-dismiss="alert" aria-hidden="true">&times;</button>
                   Saved!
               </div> 
-              <button onclick='myFunction("<%= product.id%>")' class="h-50 btn btn-lg t-pink btn-block m-0">
-                <i class="material-icons align-middle">favorite</i>
-                <small>Save</small>              
-              </button>          
+              <button onclick='addFavorites("<%= product.id%>")' class=" white border-light mx-2 rounded">
+                <i class="material-icons float-left text-left align-middle">favorite</i>
+                <small>Add Favorite</small>              
+              </button>  
+                                  
             <%end%> 
-          </div>                          
+            <%= link_to message_path(product.id) do %>
+              <button class=" mt-3 white border-light mx-2 rounded">
+                <i class="material-icons float-left align-middle ">question_answer</i>
+                <small>Ask Seller</small>              
+              </button>
+              <%end%> 
+              
+          </div>  
+                      
         </div>    
       <%end%>
     <%end%>
@@ -99,9 +108,10 @@
 </div>
 
 <script>
-  function myFunction(id) {
+  function addFavorites(id) {
     document.getElementById(id).style.display = 'block';  
  }
+ 
  function toggle(id,id2) {
   var x = document.getElementById(id);
   if (x.style.display === "none") {
