--- a/app/views/shipping_info/edit.html.erb
+++ b/app/views/shipping_info/edit.html.erb
@@ -3,7 +3,7 @@
   <hr class="my-4">
 </div>
 
-<%= simple_form_for(@user_contact_info, :url => update_info_path(current_user.id), method: "PUT") do |f| %>
+<%= simple_form_for(@shipping_info, :url => update_info_path(current_user.id), method: "PUT") do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
@@ -19,4 +19,4 @@
   </div> 
 <% end %>
 
-<%= link_to 'Back!', user_contact_info_path(1), class:"btn btn-secondary btn-lg btn-block my-4" %>
+<%= link_to 'Back!', shipping_info_path(1), class:"btn btn-secondary btn-lg btn-block my-4" %>
