--- a/app/views/shipping_info/show.html.erb
+++ b/app/views/shipping_info/show.html.erb
@@ -2,9 +2,8 @@
   <h3 class="display-5">My Shipping Details!</h3>  
   <hr class="my-4">
 </div>
-<%= simple_form_for(@user_contact_info) do |f| %>
-  <div class="form-inputs bg-light p-3"> 
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>     
+<%= simple_form_for(@shipping_info) do |f| %>
+  <div class="form-inputs bg-light p-3">        
     <p class="mt-3"><%= f.input :unit, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_number, disabled: true %></p>
     <p class="mt-3"><%= f.input :street_name, disabled: true %></p>
@@ -12,11 +11,11 @@
     <p class="mt-3"><%= f.input :postcode, disabled: true %></p>
     <p class="mt-3"><%= f.input :phone, disabled: true %></p>
   </div>   
-
+<% end %>
   <button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>" data-stripe="payment">Confirm Shipping Details!</button>
   
-  <%= link_to 'Edit shipping Details!', edit_user_contact_info_path, class:"btn btn-warning btn-lg btn-block mt-3 mb-5" %>
-<% end %>
+  <%= link_to 'Edit shipping Details!', edit_shipping_info_path, class:"btn btn-warning btn-lg btn-block mt-3 mb-5" %>
+
 <script src="https://js.stripe.com/v3/"></script>
 <script>
   document.querySelector("[data-stripe='payment']").addEventListener("click", () => {
